Fix modal overflow issue.

--- a/styles/main.css
+++ b/styles/main.css
@@ -151,15 +151,15 @@ ol.breadcrumb {
 }
 
 .modal {
-  overflow-y: auto;
+    overflow-y: auto;
 }
 
 .modal-open {
-  overflow: auto;
+    overflow: hidden;
 }
 
 .modal-open[style] {
-  padding-right: 0px !important;
+    padding-right: 0px !important;
 }
 
 .modal-body .form-group.has-feedback .form-control-feedback {
